# scylla-arms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
jenkinsfiles/: sample.jenkinsfile
libs/: persisted_dicts.py
scylla_arms/: config.py  configparser.py  main.py  persisted_dicts.py
tasks/: __init__.py  sample.properties  sample.py  sct.py
tests/: arms_settings_test.py  configparser_test.py  file_persisted_dot_dict_test.py  settings_test.py  test_persisted_model.py
