[tool.poetry]
name = "scylla-arms"
version = "0.2.0"
description = "Tool for running Scylla tasks and pipelines"
authors = ["Łukasz Sójka", "Takuya ASADA"]

[tool.poetry.scripts]
arms = 'scylla_arms.main:program.run'

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
pylint="^2.11.1"
pylint-pytest="^1.1.2"
pre-commit="^2.15.0"
autopep8="^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
